--- a/index.html
+++ b/index.html
@@ -14,6 +14,14 @@
       .animate-float-up {
         animation: float-up 0.8s ease-out forwards;
       }
+
+      @keyframes fade-in {
+        from { opacity: 0; }
+        to { opacity: 1; }
+      }
+      .animate-fade-in {
+        animation: fade-in 0.5s ease-out forwards;
+      }
       
       /* Cute Cat & Fish Background Pattern */
       .bg-cute-pattern {
@@ -39,5 +47,6 @@
 </head>
   <body>
     <div id="root"></div>
+    <script type="module" src="./index.tsx"></script>
   </body>
 </html>
