feat: Integrate Vercel analytics
Add Vercel analytics to track application usage and performance. This will provide insights into user behavior and help optimize the Meowing Morning dashboard.

--- a/index.html
+++ b/index.html
@@ -40,7 +40,9 @@
     "react": "https://aistudiocdn.com/react@^19.2.0",
     "react-dom/": "https://aistudiocdn.com/react-dom@^19.2.0/",
     "react/": "https://aistudiocdn.com/react@^19.2.0/",
-    "lucide-react": "https://aistudiocdn.com/lucide-react@^0.555.0"
+    "lucide-react": "https://aistudiocdn.com/lucide-react@^0.555.0",
+    "@vercel/analytics/react": "https://esm.sh/@vercel/analytics@1.5.0/react?external=react,react-dom",
+    "@vercel/analytics/": "https://aistudiocdn.com/@vercel/analytics@^1.5.0/"
   }
 }
 </script>
